# exploration-app

./: .env.example  .gitignore  DEPLOYMENT.md  FICHIERS_CREES.md  GUIDE.md  LICENSE  QUAND_TU_REVIENS.md  QUICKSTART.md  QUICKSTART_ENTREPRISES.md  README.md  README_FINAL.txt  RESUME_PROJET.md  SCORING_CONFIG.md  START_HERE.txt  STRUCTURE.md  analyze_companies.py  analyze_opportunities.py  demo_companies.py  main.py  requirements.txt  run_continuous_scan.sh  test_pappers_connection.py  vercel.json
archive/: NOUVEAU_SYSTEME_ENTREPRISES.md  README.md  README_PRINCIPAL.md  README_UTILISATION.md  RESUME_FINAL.md  TRAVAIL_DU_JOUR.md
companies-analysis/: .env.example  INPI_SETUP.md  README.md  dashboard.py  requirements.txt
config/: config.example.yaml  config.yaml
crypto-arbitrage/: .env.example  README.md  requirements.txt
docs/: GUIDE.md  README.md
france-market-scanner/: .env.example  .gitignore  README.md  analyze_ratios.py  analyze_ratios_v2.py  check_sirene_accuracy.py  cli.py  extract_inpi.py  find_dividend_machines.py  find_gems.py  find_gems_correct.py  find_highwage_gems.py  find_real_small_gems.py  pyproject.toml  requirements.txt
france-market-scanner/config/: config.yaml
france-market-scanner/src/: __init__.py
france-market-scanner/src/core/: __init__.py  config.py  database.py  downloader.py
france-market-scanner/src/extractors/: __init__.py  bodacc.py  inpi.py  sirene.py
france-market-scanner/src/loaders/: __init__.py
france-market-scanner/src/transformers/: __init__.py
scripts/: README.md  analyze_companies.py  demo_companies.py  main.py  (+1 more)
(+46 files in other folders)
