[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "france-market-scanner"
version = "0.1.0"
description = "Bulk French company data collection from public APIs (SIRENE, INPI, BODACC)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jack"}
]
dependencies = [
    "duckdb>=1.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
    "paramiko>=3.0.0",
    "lxml>=5.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyarrow>=15.0.0",
    "pandas>=2.3.3",
    "chdb>=3.7.2",
]

[project.scripts]
fms = "cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
